--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "build-and-run": "tsc --project . && node index.js",
     "run-migrator": "tsc --project . && node migration/index.js",
     "tsc": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Nicolai McAlley",
   "license": "Apache-2.0",
   "devDependencies": {
-    "typescript": "^5.2.2"
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.0",
+    "typescript": "^5.8.2"
   },
   "dependencies": {
     "@types/node": "^22.9.0",
